Added: new code

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               Ingilistili 3 taykwondo men PDP junior da 3 oydan beri o'qiyman
               PDP ga 22.08.2025 da kelganman </b
             ><br /><br />
-            <button class="lo">VC Dowlond</button>
+            <button class="lo">CV Dowlond</button>
           </div>
           <div class="img">
             <img
